--- a/config.yaml
+++ b/config.yaml
@@ -1,12 +1,14 @@
-first_name: Soroushali
+first_name: aliso
 last_name: Baghernezhad
-experiment_name: first
+experiment_name: second
 gesture_duration: 1 
 rest_duration: 1
 number_of_gesture_repetition: 1 
 emg_frequency: 2000
 IMU_frequency: 200
 camera_fps: 60
+phase1_wait: 5
 file_path: /home/user/data/example.txt
-
+date: 11122024
 slides_images_path: experiment1_images
+saving_dir: ./data/
