--- a/config.yaml
+++ b/config.yaml
@@ -12,3 +12,8 @@ file_path: /home/user/data/example.txt
 date: 11122024
 slides_images_path: experiment1_images
 saving_dir: ./data/
+saving_dir_noraxon: ./data_noraxon/
+
+merged_imu_path: "./merged_imu.csv"
+merged_emg_path: "./merged_emg.csv"
+processed_data_dir : "./processed_data/"
