--- a/config.yaml
+++ b/config.yaml
@@ -10,6 +10,8 @@ emg_frequency: 2000
 IMU_frequency: 200
 camera_fps: 60
 phase1_wait: 5
+window_size: 150
+overlapping: 75
 file_path: /home/user/data/example.txt
 date: 11122024
 slides_images_path: experiment1_images
