--- a/config.yaml
+++ b/config.yaml
@@ -12,6 +12,7 @@ camera_fps: 60
 phase1_wait: 5
 window_size: 150
 overlapping: 75
+save_model : True
 file_path: /home/user/data/example.txt
 date: 11122024
 slides_images_path: experiment1_images
